--- a/ScheduleAIFrontend/package.json
+++ b/ScheduleAIFrontend/package.json
@@ -19,9 +19,11 @@
     "@emotion/styled": "^11.14.0",
     "@expo/vector-icons": "^14.0.4",
     "@mui/material": "^6.3.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.20",
+    "expo": "^52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -39,11 +41,12 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
