--- a/ScheduleAIFrontend/app.json
+++ b/ScheduleAIFrontend/app.json
@@ -32,13 +32,7 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         },
-        "@react-native-google-signin/google-signin",
-        {
-          "platforms": [
-            "android",
-            "ios"
-          ]
-        }
+        "@react-native-google-signin/google-signin"
       ]
     ],
     "experiments": {
