--- a/ScheduleAIFrontend/app.json
+++ b/ScheduleAIFrontend/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.ScheduleAI"
     },
     "web": {
       "bundler": "metro",
@@ -31,14 +32,12 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
-        },
-        "@react-native-google-signin/google-signin"
-      ]
+        }
+      ],
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true
     }
-    
-
-    }
+  }
 }
