--- a/ScheduleAIFrontend/android/gradle.properties
+++ b/ScheduleAIFrontend/android/gradle.properties
@@ -54,3 +54,8 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+MYAPP_UPLOAD_STORE_FILE=C:/Advey/ScheduleAI/ScheduleAIFrontend/android/app/my_release_key.keystore
+MYAPP_UPLOAD_KEY_ALIAS= my_key_alias
+MYAPP_UPLOAD_STORE_PASSWORD=FtcroboT06!
+MYAPP_UPLOAD_KEY_PASSWORD=FtcroboT06!
